fix line breaks in deadlines on the home page

--- a/app/assets/stylesheets/pages.css.less
+++ b/app/assets/stylesheets/pages.css.less
@@ -19,6 +19,7 @@
     margin-bottom: 8px;
     text-transform: uppercase;
 }
+.home-summary-card .dynamic-homepage-series-link,
 .home-summary-card .course-name {
     white-space: nowrap;
     overflow: hidden;
